2019-05-18  Karl Berry  <karl@freefriends.org>

	* patgen.ch (trie_size),
	(triec_size): increase to maximum values 110021182 and 55000006
	as reported by Keno Wehr,
	(print_real calls): reorder parentheses to avoid overflow.
	https://tug.org/pipermail/tex-live/2019-May/043679.html.

2019-05-08  Akira Kakuto  <kakuto@w32tex.org>

	* texmfmp.h: Define a new function find_input_file(integer s).
	A report in tex-k list:
	https://tug.org/pipermail/tex-k/2019-May/003014.html

2019-04-07  Karl Berry  <karl@freefriends.org>

	* TeX Live 2019.

2019-03-11  Karl Berry  <karl@tug.org>

	* ac/web2c.ac (kpse_tex_progs) <luatex53>: remove.
	<luatex>, <mflua>: depend on lua53, not lua52.

2019-01-19  Andreas Scherer  <https://ascherer.github.io>

	* help.h: Fix CTWILL '--help' text.

2019-01-15  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: Provisional 'bindtextdomain' lookup in TDS.

2019-01-10  Andreas Scherer  <https://ascherer.github.io>

	* help.h (CTWILLHELP): update.

2019-01-09  Andreas Scherer  <https://ascherer.github.io>
	
	* help.h (CTANGLEHELP, CWEAVEHELP, CTWILLHELP): update.

2019-01-06  Andreas Scherer  <https://ascherer.github.io>

	Integration of CWEBbin as the new CWEB in TeX Live,
	https://github.com/ascherer/cwebbin.
	
	Purge cweb.h and cwebboot.h[in] from CWEB build process.
	* am/bootstrap.am (cweb.h): no longer created at common-ctangle.
	(DISTCLEANFILES): do not remove cweb.h or cwebboot.h.
	$(ctangleboot_OBJECTS): do not depend on cwebboot.h.
	(EXTRA_DIST): omit no-longer-created cwebboot.hin.
	(ctangle.c),
	* am/cweb.am (cweave.c): depend on new file cwebdir/comm-w2c.h,
	instead of common.h.
	$(cweave_OBJECTS): remove rule.
	* ctangleboot-sh.in <common>: only generate .c, not .h;
	don't try to #include cwebboot.h.
	* ctangleboot.cin,
	* cwebboot.cin: regenerate.
	* cwebboot.hin: delete.
	* help.h (CTWILLHELP): new help string.
	(CTANGLEHELP, CWEAVEHELP): update.
	
	Add CTWILL material on top of CWEAVE.